# homelab

./: .gitignore  checklist.md  create_admin.js  docker-compose.yml  entry.sh  install_sys_reqs.sh  notes.md  readme.md  requirements.txt  setup.cfg
bg3/src/homelab/: __init__.py  act_1.html  act_3.html  app.py  bg.py  models.py
db/: init-mongo.js
home/: __init__.py  app.py  models.py  urls.py
home/src/: urls.py
home/src/home/: app.py  dev.py  urls.py
home/templates/: index.html  navbar.html
home/tests/: test_models.py
journal/: Dockerfile  requirements.txt  requirements_dev.txt  setup.cfg
journal/src/journal/: app.py  routes.py
nginx/: Dockerfile  index.html  nginx.conf
pokemon/: Dockerfile  setup.cfg
pokemon/src/manifests/: 1-encounters.json  10-encounters.json  100-encounters.json  101-encounters.json  102-encounters.json  104-encounters.json  105-encounters.json  107-encounters.json  (+644 more)
src/home/: app.py  database.py  dev.py  models.py  ytutils.py
src/homelab/: act_2.html  bg.py  die.py
yt/: readme.md
ytils/: .gitignore  README.md  docker-compose-app.yml  docker-compose.yml
ytils/ytils/: Dockerfile
ytils/ytils/app/: .dockerignore  app.py  db.py  download.py  example.env  logger.py  minio.py  requirements.txt  requirements_dev.txt  settings.py  setup.cfg  utils.py
ytils/ytils/app/crud/: api_key.py  manifest.py  video.py
ytils/ytils/app/routers/: __init__.py  api_keys.py  generic.py  manifests.py  videos.py
ytils/ytils/app/templates/: api_keys.html.j2  base.html.j2  index.html.j2  navbar.html.j2  video.html.j2  videos.html.j2
(+30 files in other folders)
