[metadata]
name         = ytils
version      = 0.0.0

[options]
zip_safe = false
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =

[options.packages.find]
where=src

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = '--verbose'
testpaths = ['tests']

[flake8]
max-line-length = 160
exclude =
    migrations
    __pycache__
    settings.py
    venv
    .venv
per-file-ignores =
    */models.py: E501
    */__init__.py: F401